@@ -1,3 +1,7 @@
+2001-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (TMDARC): Add support for alternate config-file.
+
 2001-04-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (TMDA_VERSION): Begin 0.11 development.
